unpackaged/main/default/objects/Sales_Rep__c/Sales_Rep__c.object-meta.xml
<CustomObject>
    <description>A Sales Rep (that may or may not be a Salesforce user) but is responsible for a Customer Account</description>
    <label>Sales Rep</label>
    <nameField>
        <label>Sales Rep</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Reps</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>