unpackaged/main/default/objects/Sales_Rep__c/fields/Account_Updates__c.field-meta.xml
<CustomField>
    <fullName>Account_Updates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account Updates</label>
    <type>Checkbox</type>
</CustomField>