unpackaged/main/default/objects/Sales_Rep__c/fields/Active_Focus_Goals__c.field-meta.xml
<CustomField>
    <fullName>Active_Focus_Goals__c</fullName>
    <inlineHelpText>Active sales goals for this rep by Focus Product Category</inlineHelpText>
    <label>Active Focus Goals</label>
    <summarizedField>Sales_Goal__c.Total_Budget_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Sales_Goal__c.Inactive__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Sales_Goal__c.Focus_Product_Category__c</field>
        <operation>notEqual</operation>
        <value>&quot;&quot;</value>
    </summaryFilterItems>
    <summaryForeignKey>Sales_Goal__c.Sales_Rep__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>