unpackaged/main/default/objects/Sales_Rep__c/fields/Active_Goals__c.field-meta.xml
<CustomField>
    <fullName>Active_Goals__c</fullName>
    <inlineHelpText>The total sales amount budgeted for this Sales Rep</inlineHelpText>
    <label>Active Total Budget</label>
    <summarizedField>Sales_Goal__c.Total_Budget_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Sales_Goal__c.Inactive__c</field>
        <operation>notEqual</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Sales_Goal__c.Customer__c</field>
        <operation>equals</operation>
        <value>&quot;&quot;</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Sales_Goal__c.Product__c</field>
        <operation>equals</operation>
        <value>&quot;&quot;</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Sales_Goal__c.Budget_Type__c</field>
        <operation>equals</operation>
        <value>Monthly Sales</value>
    </summaryFilterItems>
    <summaryForeignKey>Sales_Goal__c.Sales_Rep__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>