unpackaged/main/default/objects/Sales_Rep__c/fields/Active_Monthly_Budget__c.field-meta.xml
<CustomField>
    <fullName>Active_Monthly_Budget__c</fullName>
    <description>Monthly budget for Current Month (Updated by Roll-up Helper Monthly)</description>
    <inlineHelpText>Monthly budget for Current Month</inlineHelpText>
    <label>Budget TM</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>