unpackaged/main/default/objects/Sales_Rep__c/fields/Active_Total_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Active_Total_Forecast__c</fullName>
    <inlineHelpText>The total sales amount forecasted (budget adjusted throughout the year as needed) for this Sales Rep</inlineHelpText>
    <label>Active Total Forecast</label>
    <summarizedField>Sales_Goal__c.Forecast_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Sales_Goal__c.Inactive__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Sales_Goal__c.Budget_Type__c</field>
        <operation>equals</operation>
        <value>Monthly Sales</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Sales_Goal__c.Customer__c</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Sales_Goal__c.Sales_Rep__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>