unpackaged/main/default/objects/Sales_Rep__c/fields/ATS_Open__c.field-meta.xml
<CustomField>
    <fullName>ATS_Open__c</fullName>
    <defaultValue>0</defaultValue>
    <description>ATS Open Orders populated by roll up run every 2 hours</description>
    <inlineHelpText>All Open Orders non-Field Service</inlineHelpText>
    <label>ATS Open $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>