unpackaged/main/default/objects/Sales_Rep__c/fields/August_LY__c.field-meta.xml
<CustomField>
    <fullName>August_LY__c</fullName>
    <label>August LY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>