unpackaged/main/default/objects/Sales_Rep__c/fields/Bentgrass_Actual__c.field-meta.xml
<CustomField>
    <fullName>Bentgrass_Actual__c</fullName>
    <label>Bentgrass Actual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>