unpackaged/main/default/objects/Sales_Rep__c/fields/Budget_PM__c.field-meta.xml
<CustomField>
    <fullName>Budget_PM__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Previous month management budget. Used for reports</description>
    <label>Budget PM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>