unpackaged/main/default/objects/Sales_Rep__c/fields/Budget_Rem__c.field-meta.xml
<CustomField>
    <fullName>Budget_Rem__c</fullName>
    <description>Current and Future Month Goals</description>
    <formula>Active_Goals__c -  YTD_Budget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Current and Future Month Goals</inlineHelpText>
    <label>Budget Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>