unpackaged/main/default/objects/Sales_Rep__c/fields/Budget_TM_Field__c.field-meta.xml
<CustomField>
    <fullName>Budget_TM_Field__c</fullName>
    <description>Monthly budget for Field Service for Current Month (Updated by Roll-Up Helper Monthly)</description>
    <inlineHelpText>Monthly budget for Field Service for Current Month</inlineHelpText>
    <label>Budget TM Field</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>