unpackaged/main/default/objects/Sales_Rep__c/fields/Current_Month_Open_Orders__c.field-meta.xml
<CustomField>
    <fullName>Current_Month_Open_Orders__c</fullName>
    <description>Open orders with Requested Ship Date of the current month</description>
    <inlineHelpText>Open orders with Requested Ship Date of the current month</inlineHelpText>
    <label>Open Orders TM</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>