unpackaged/main/default/objects/Sales_Rep__c/fields/December_LY__c.field-meta.xml
<CustomField>
    <fullName>December_LY__c</fullName>
    <label>December LY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>