unpackaged/main/default/objects/Sales_Rep__c/fields/ENP_Goal__c.field-meta.xml
<CustomField>
    <fullName>ENP_Goal__c</fullName>
    <label>ENP Goal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>