unpackaged/main/default/objects/Sales_Rep__c/fields/ENP_Rep__c.field-meta.xml
<CustomField>
    <fullName>ENP_Rep__c</fullName>
    <label>ENP Rep</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Curt Geron</fullName>
            </value>
            <value>
                <fullName>John Gruneisen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>