unpackaged/main/default/objects/Sales_Rep__c/fields/Facility_Manager__c.field-meta.xml
<CustomField>
    <fullName>Facility_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facility Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Facility_Reps</relationshipName>
    <type>Lookup</type>
</CustomField>