unpackaged/main/default/objects/Sales_Rep__c/fields/Field_Open__c.field-meta.xml
<CustomField>
    <fullName>Field_Open__c</fullName>
    <defaultValue>0</defaultValue>
    <description>All Open Orders to S Account&#39;s populated by roll up helper</description>
    <inlineHelpText>All Open Orders Field Service</inlineHelpText>
    <label>Field Open $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>