unpackaged/main/default/objects/Sales_Rep__c/fields/Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year__c</fullName>
    <defaultValue>&quot;Sales&quot;</defaultValue>
    <label>Fiscal Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales</fullName>
                <default>true</default>
                <label>Sales</label>
            </value>
            <value>
                <fullName>Calendar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>