unpackaged/main/default/objects/Sales_Rep__c/fields/FP_Bentgrass__c.field-meta.xml
<CustomField>
    <fullName>FP_Bentgrass__c</fullName>
    <label>FP - Bentgrass Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>