unpackaged/main/default/objects/Sales_Rep__c/fields/FY_2019_Total_Sales__c.field-meta.xml
<CustomField>
    <fullName>FY_2019_Total_Sales__c</fullName>
    <description>Updated by Sales Rep: Fiscal Year 2019 Sales Flow</description>
    <label>FY 2019 Total Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>