unpackaged/main/default/objects/Sales_Rep__c/fields/House_on_Sales_Analysis__c.field-meta.xml
<CustomField>
    <fullName>House_on_Sales_Analysis__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this rep is part of the House Group on Daily Company Sales Summary</description>
    <inlineHelpText>Indicates if this rep is part of the House Group on Daily Company Sales Summary</inlineHelpText>
    <label>House Account?</label>
    <type>Checkbox</type>
</CustomField>