unpackaged/main/default/objects/Sales_Rep__c/fields/JDT_Service_Open__c.field-meta.xml
<CustomField>
    <fullName>JDT_Service_Open__c</fullName>
    <description>This is current month open orders for JDT Service</description>
    <label>JDT Service Open TM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>