unpackaged/main/default/objects/Sales_Rep__c/fields/JDT_Service_YTD_Sales__c.field-meta.xml
<CustomField>
    <fullName>JDT_Service_YTD_Sales__c</fullName>
    <inlineHelpText>Sales through the last day of the previous month</inlineHelpText>
    <label>JDT Service YTD Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>