unpackaged/main/default/objects/Sales_Rep__c/fields/JDT_Total_Budget__c.field-meta.xml
<CustomField>
    <fullName>JDT_Total_Budget__c</fullName>
    <description>Annual Budget/Goal for Sports Turf Projects</description>
    <inlineHelpText>Annual Budget/Goal for Sports Turf Projects</inlineHelpText>
    <label>JDT Total Budget</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>