unpackaged/main/default/objects/Sales_Rep__c/fields/Location_FM__c.field-meta.xml
<CustomField>
    <fullName>Location_FM__c</fullName>
    <formula>Primary_Location__r.Facility_Manager__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location FM</label>
    <type>Text</type>
</CustomField>