unpackaged/main/default/objects/Sales_Rep__c/fields/Location_Name__c.field-meta.xml
<CustomField>
    <fullName>Location_Name__c</fullName>
    <formula>Primary_Location__r.Name</formula>
    <label>Location Name</label>
    <type>Text</type>
</CustomField>