unpackaged/main/default/objects/Sales_Rep__c/fields/Location_Num__c.field-meta.xml
<CustomField>
    <fullName>Location_Num__c</fullName>
    <formula>Primary_Location__r.Location_Number__c</formula>
    <label>Location #</label>
    <type>Text</type>
</CustomField>