unpackaged/main/default/objects/Sales_Rep__c/fields/Location_RM__c.field-meta.xml
<CustomField>
    <fullName>Location_RM__c</fullName>
    <description>The Regional Manager for this Sales Rep&#39;s Primary Location</description>
    <formula>Primary_Location__r.Regional_Manager__c</formula>
    <label>Location RM</label>
    <type>Text</type>
</CustomField>