unpackaged/main/default/objects/Sales_Rep__c/fields/LY_Total_Budget__c.field-meta.xml
<CustomField>
    <fullName>LY_Total_Budget__c</fullName>
    <description>Total of Last Year Monthly Sales Goals (Filtered Roll-Up Summary)</description>
    <inlineHelpText>Total of Last Year Monthly Sales Goals</inlineHelpText>
    <label>LY Total Budget</label>
    <summarizedField>Sales_Goal__c.Forecast_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Sales_Goal__c.Budget_Type__c</field>
        <operation>equals</operation>
        <value>Monthly Sales</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Sales_Goal__c.Customer__c</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Sales_Goal__c.EOP__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Sales_Goal__c.Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>10/1/2020</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Sales_Goal__c.Date__c</field>
        <operation>lessOrEqual</operation>
        <value>9/30/2021</value>
    </summaryFilterItems>
    <summaryForeignKey>Sales_Goal__c.Sales_Rep__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>