unpackaged/main/default/objects/Sales_Rep__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Reps</relationshipName>
    <type>Lookup</type>
</CustomField>