unpackaged/main/default/objects/Sales_Rep__c/fields/Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Manager_Name__c</fullName>
    <description>Manager Name or Own Name if Manager (for Report Grouping)</description>
    <formula>Manager__r.FirstName + &quot; &quot; +  Manager__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manager Name</label>
    <type>Text</type>
</CustomField>