unpackaged/main/default/objects/Sales_Rep__c/fields/Manager_User__c.field-meta.xml
<CustomField>
    <fullName>Manager_User__c</fullName>
    <description>Is the Current User the Sales Rep&#39;s Manager?</description>
    <formula>Manager__c = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Is the Current User the Sales Rep&#39;s Manager?</inlineHelpText>
    <label>Manager User?</label>
    <type>Checkbox</type>
</CustomField>