unpackaged/main/default/objects/Sales_Rep__c/fields/May_LY__c.field-meta.xml
<CustomField>
    <fullName>May_LY__c</fullName>
    <label>May LY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>