unpackaged/main/default/objects/Sales_Rep__c/fields/November_LY__c.field-meta.xml
<CustomField>
    <fullName>November_LY__c</fullName>
    <description>November sales last year</description>
    <label>November LY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>