unpackaged/main/default/objects/Sales_Rep__c/fields/October__c.field-meta.xml
<CustomField>
    <fullName>October__c</fullName>
    <description>October sales of previous year</description>
    <label>October</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>