unpackaged/main/default/objects/Sales_Rep__c/fields/Open_Orders__c.field-meta.xml
<CustomField>
    <fullName>Open_Orders__c</fullName>
    <label>Open Orders $</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>