unpackaged/main/default/objects/Sales_Rep__c/fields/Prev_JDT_Service_YTD__c.field-meta.xml
<CustomField>
    <fullName>Prev_JDT_Service_YTD__c</fullName>
    <inlineHelpText>Previous year sales through current month. Example if today is 11/5/19 this will show 10/1/18 through 11/30/18</inlineHelpText>
    <label>Prev. JDT Service YTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>