unpackaged/main/default/objects/Sales_Rep__c/fields/Prev_Year_Budget__c.field-meta.xml
<CustomField>
    <fullName>Prev_Year_Budget__c</fullName>
    <description>Set at the end of the prev. fiscal year.</description>
    <label>Prev Year Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>