unpackaged/main/default/objects/Sales_Rep__c/fields/Prev_YTD2__c.field-meta.xml
<CustomField>
    <fullName>Prev_YTD2__c</fullName>
    <description>This is the second attempt at showing previous year  sales due to rollup helper not being able to handle the amount of data. We split out previous year sales by month at the start of a new fiscal year</description>
    <formula>October_LY__c +  November_LY__c + December_LY__c +  January_LY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Previous year sales through current month. Example if today is 11/5/19 this will show 10/1/18 through 11/30/18</inlineHelpText>
    <label>Prev YTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>