unpackaged/main/default/objects/Sales_Rep__c/fields/Prev_YTD_Cost__c.field-meta.xml
<CustomField>
    <fullName>Prev_YTD_Cost__c</fullName>
    <label>Prev YTD Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>