unpackaged/main/default/objects/Sales_Rep__c/fields/Prev_YTD_Margin__c.field-meta.xml
<CustomField>
    <fullName>Prev_YTD_Margin__c</fullName>
    <formula>IF( Prev_YTD2__c &gt; 0, ((Prev_YTD2__c - Prev_YTD_Cost__c )/ Prev_YTD2__c ),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prev YTD Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>