unpackaged/main/default/objects/Sales_Rep__c/fields/Prev_YTD_Sales__c.field-meta.xml
<CustomField>
    <fullName>Prev_YTD_Sales__c</fullName>
    <inlineHelpText>Totals through this month last year</inlineHelpText>
    <label>Prev. YTD Sales(do not use)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>