unpackaged/main/default/objects/Sales_Rep__c/fields/Primary_Collections_Manager__c.field-meta.xml
<CustomField>
    <fullName>Primary_Collections_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indicates the Collections Manager usually responsible for this Sales Rep&#39;s Accounts</description>
    <label>Primary Collections Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Collections_Sales_Reps</relationshipName>
    <type>Lookup</type>
</CustomField>