unpackaged/main/default/objects/Sales_Rep__c/fields/Primary_Location__c.field-meta.xml
<CustomField>
    <fullName>Primary_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Sales Reps</relationshipLabel>
    <relationshipName>Sales_Reps</relationshipName>
    <type>Lookup</type>
</CustomField>