unpackaged/main/default/objects/Sales_Rep__c/fields/Primary_Market__c.field-meta.xml
<CustomField>
    <fullName>Primary_Market__c</fullName>
    <label>Primary Market</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Market</valueSetName>
    </valueSet>
</CustomField>