unpackaged/main/default/objects/Sales_Rep__c/fields/Progress_Total_Budget__c.field-meta.xml
<CustomField>
    <fullName>Progress_Total_Budget__c</fullName>
    <description>Progress YTD Amounts on Monthly Management Budget (will not include Current Month)</description>
    <inlineHelpText>Progress YTD Amounts on Monthly Management Budget (will not include Current Month)</inlineHelpText>
    <label>YTD Progress</label>
    <summarizedField>Sales_Goal__c.Progress_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Sales_Goal__c.Customer__c</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Sales_Goal__c.Product__c</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Sales_Goal__c.Budget_Type__c</field>
        <operation>equals</operation>
        <value>Monthly Sales</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Sales_Goal__c.Focus_Product_Category__c</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Sales_Goal__c.Inactive__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Sales_Goal__c.Sales_Rep__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>