unpackaged/main/default/objects/Sales_Rep__c/fields/Purchaser__c.field-meta.xml
<CustomField>
    <fullName>Purchaser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used in special order process</description>
    <label>Purchaser</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Reps_Purchaser</relationshipName>
    <type>Lookup</type>
</CustomField>