unpackaged/main/default/objects/Sales_Rep__c/fields/Real_Rep_Id__c.field-meta.xml
<CustomField>
    <fullName>Real_Rep_Id__c</fullName>
    <description>Casesafe id for python etc.</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Real Rep Id</label>
    <type>Text</type>
</CustomField>