unpackaged/main/default/objects/Sales_Rep__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>Geography/Region of the Sales Rep</description>
    <inlineHelpText>Geography/Region of the Sales Rep</inlineHelpText>
    <label>Region</label>
    <length>100</length>
    <type>Text</type>
</CustomField>