unpackaged/main/default/objects/Sales_Rep__c/fields/Rem_to_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Rem_to_Invoice__c</fullName>
    <description>Editable by Managers - Predicted $ Remaining to Invoice in Current Month</description>
    <inlineHelpText>Editable by Managers - Predicted $ Remaining to Invoice in Current Month</inlineHelpText>
    <label>Rem. to Invoice</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>