unpackaged/main/default/objects/Sales_Rep__c/fields/Rep_Annual_Account_Forecast_LY__c.field-meta.xml
<CustomField>
    <fullName>Rep_Annual_Account_Forecast_LY__c</fullName>
    <description>Used only for reporting. Managers want to see final actuals vs. forecasting</description>
    <inlineHelpText>Sum of all account forecasts for prev year.</inlineHelpText>
    <label>Rep Annual Account Forecast LY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>