unpackaged/main/default/objects/Sales_Rep__c/fields/Rep_User__c.field-meta.xml
<CustomField>
    <fullName>Rep_User__c</fullName>
    <description>Is the Current User the Rep?</description>
    <formula>Salesforce_User__c  =  $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Is the Current User the Rep?</inlineHelpText>
    <label>Rep User?</label>
    <type>Checkbox</type>
</CustomField>