unpackaged/main/default/objects/Sales_Rep__c/fields/Rep_View__c.field-meta.xml
<CustomField>
    <fullName>Rep_View__c</fullName>
    <description>Indicates if the Current User is also the Sales Rep User</description>
    <formula>IF( Salesforce_User__r.Id = $User.Id , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates if the Current User is also the Sales Rep User</inlineHelpText>
    <label>Rep View</label>
    <type>Checkbox</type>
</CustomField>