unpackaged/main/default/objects/Sales_Rep__c/fields/S_Account_Sales__c.field-meta.xml
<CustomField>
    <fullName>S_Account_Sales__c</fullName>
    <inlineHelpText>Does not include JDT-X line items</inlineHelpText>
    <label>S Account Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>