unpackaged/main/default/objects/Sales_Rep__c/fields/Sales_Rep_Golf__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Golf__c</fullName>
    <formula>TEXT(Primary_Market__c) = &quot;Golf&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates if this Sales Rep Target Market Includes Golf</inlineHelpText>
    <label>Sales Rep Golf?</label>
    <type>Checkbox</type>
</CustomField>