unpackaged/main/default/objects/Sales_Rep__c/fields/Sales_Rep_Name_and_Num__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Name_and_Num__c</fullName>
    <formula>Sales_Rep_Num__c + &#39; - &#39; + Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Rep #/Name</label>
    <type>Text</type>
</CustomField>