unpackaged/main/default/objects/Sales_Rep__c/fields/Sales_Rep_Num__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Num__c</fullName>
    <externalId>true</externalId>
    <label>Sales Rep Num</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>