unpackaged/main/default/objects/Sales_Rep__c/fields/Sales_Rep_Owner__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Owner__c</fullName>
    <description>Alias of the Sales Rep Owner (make sure this matches all their customer&#39;s owner)</description>
    <formula>Owner:User.Alias</formula>
    <label>Sales Rep Owner</label>
    <type>Text</type>
</CustomField>