unpackaged/main/default/objects/Sales_Rep__c/fields/Sales_Rep_Sports__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Sports__c</fullName>
    <formula>TEXT(Primary_Market__c) = &quot;Sports Fields&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Rep Sports?</label>
    <type>Checkbox</type>
</CustomField>