unpackaged/main/default/objects/Sales_Rep__c/fields/Sales_Rep_T_O__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_T_O__c</fullName>
    <formula>TEXT(Primary_Market__c) = &quot;Turf and Ornamental&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Rep T&amp;O?</label>
    <type>Checkbox</type>
</CustomField>