unpackaged/main/default/objects/Sales_Rep__c/fields/Salesforce_User__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If the sales rep is also a salesforce user, link the Rep account to the User account (used for updating ownership so the My Contacts and My Accounts works for sales rep users)</description>
    <label>Salesforce User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Reps1</relationshipName>
    <type>Lookup</type>
</CustomField>