unpackaged/main/default/objects/Sales_Rep__c/fields/Service_Territory__c.field-meta.xml
<CustomField>
    <fullName>Service_Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This will allow us to automate the work order creation some. We can set the area manager and area manager user field based off this. Look for process builder &#39;Work Order Automation&#39; for details</description>
    <label>Service Territory</label>
    <referenceTo>ServiceTerritory</referenceTo>
    <relationshipLabel>Sales Reps</relationshipLabel>
    <relationshipName>Sales_Reps</relationshipName>
    <type>Lookup</type>
</CustomField>