unpackaged/main/default/objects/Sales_Rep__c/fields/test_ytd__c.field-meta.xml
<CustomField>
    <fullName>test_ytd__c</fullName>
    <description>The roll up helper was breaking once we got past 6/1/2019. This field will hold the value of YTD Sales through 6/1 and then we will use another field to hold the overflow and add the two together to get YTD # until a better solution is reached</description>
    <label>YTD 10-1 6-1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>