unpackaged/main/default/objects/Sales_Rep__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>Title</label>
    <length>32</length>
    <type>Text</type>
</CustomField>