unpackaged/main/default/objects/Sales_Rep__c/fields/TM_ATS_Sales__c.field-meta.xml
<CustomField>
    <fullName>TM_ATS_Sales__c</fullName>
    <label>TM Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>