unpackaged/main/default/objects/Sales_Rep__c/fields/TM_Cost__c.field-meta.xml
<CustomField>
    <fullName>TM_Cost__c</fullName>
    <label>TM Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>