unpackaged/main/default/objects/Sales_Rep__c/fields/TM_JDT_Sales__c.field-meta.xml
<CustomField>
    <fullName>TM_JDT_Sales__c</fullName>
    <label>TM JDT Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>