unpackaged/main/default/objects/Sales_Rep__c/fields/TM_Margin__c.field-meta.xml
<CustomField>
    <fullName>TM_Margin__c</fullName>
    <formula>IF( TM_Price__c &gt; 0,((TM_Price__c - TM_Cost__c )/TM_Price__c ),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TM Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>