unpackaged/main/default/objects/Sales_Rep__c/fields/TM_Total_Sales__c.field-meta.xml
<CustomField>
    <fullName>TM_Total_Sales__c</fullName>
    <formula>TM_JDT_Sales__c +  TM_ATS_Sales__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>ATS + JDT Service Sales</inlineHelpText>
    <label>TM Total Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>